remove unnecessary dto
