# backend/src/main/java/com/odde/doughnut/entities/AssessmentAttempt.java
@@ -1,9 +1,10 @@
 package com.odde.doughnut.entities;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
-import com.odde.doughnut.controllers.dto.AssessmentHistory;
 import jakarta.persistence.*;
 import java.sql.Timestamp;
+
+import jakarta.validation.constraints.NotNull;
 import lombok.Getter;
 import lombok.Setter;
 
@@ -19,9 +20,11 @@ public class AssessmentAttempt extends EntityIdentifiedByIdOnly {
 
   @ManyToOne
   @JoinColumn(name = "notebook_id")
+  @JsonIgnore
   private Notebook notebook;
 
   @Column(name = "submitted_at")
+  @NotNull
   private Timestamp submittedAt;
 
   @Column(name = "answers_total")
@@ -30,11 +33,15 @@ public class AssessmentAttempt extends EntityIdentifiedByIdOnly {
   @Column(name = "answers_correct")
   private int answersCorrect;
 
-  public AssessmentHistory getAssessmentHistory() {
-    return new AssessmentHistory(
-        getId(),
-        getNotebook().getHeadNote().getTopicConstructor(),
-        getSubmittedAt(),
-        ((double) getAnswersCorrect() / getAnswersTotal()) >= 0.8);
+  public String getNotebookTitle() {
+    return getNotebook().getHeadNote().getTopicConstructor();
+  }
+
+  public Boolean getIsPass() {
+    return ((double) getAnswersCorrect() / getAnswersTotal()) >= 0.8;
+  }
+
+  public AssessmentAttempt getAssessmentHistory() {
+    return this;
   }
 }
